	PR ld/4267 	* elf32-ppc.c (allocate_dynrelocs): Set plt.offset to -1 for 	unused entries.  Don't clear plt.plist in loop.